--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your Favorite Source of Free Bootstrap Themes</strong>
+              <strong>Stefanny Alves</strong>
+            </h1>
+            <h1 class="text-uppercase">
+              UX/UI Designer
             </h1>
             <hr>
           </div>
