--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
@@ -61,26 +61,27 @@
             <h1 class="text-uppercase">
               <strong>Stefanny Alves</strong>
             </h1>
-            <h1 class="text-uppercase">
+            <h3 class="text-uppercase">
               UX/UI Designer
-            </h1>
+            </h3>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+            <p class="text-faded mb-5">Paraense, 23 anos, morando em SP, amo cachorros, viajar e natureza. Ah um filmezinho ou série no netflix é sempre bom :)</p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Ver portfólio</a>
           </div>
         </div>
       </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-primary">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded mb-4">Possuo 3 anos de experiência de desenvolvimento front-end e UI Design, conforme fui aprofundando meus estudos, lendo artigos
+            e fazendo cursos e percebi que criar layouts, dar solução visuais para os problemas que o usuário tem, é minha paixão.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -91,7 +92,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">Principais habilidades</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -227,31 +228,37 @@
       </div>
     </section>
 
-    <section class="bg-dark text-white">
+    <!-- <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
         <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
       </div>
-    </section>
+    </section> -->
 
     <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Curtiu meu portifa? Quer falar comigo?</h2>
             <hr class="my-4">
             <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
-            <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>123-456-6789</p>
+            <i class="fab fa-whatsapp-square fa-3x mb-3"></i>
+            <a href="api.whatsapp.com/send?phone=5511987490154"><p>(11)98749-0154</p></a>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
               <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+            </p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fab fa-linkedin mb-3 fa-3x"></i>
+            <p>
+              <a href="www.linkedin.com/in/stefannyalves">Stefanny Alves</a>
             </p>
           </div>
         </div>
