--- a/form.html
+++ b/form.html
@@ -43,32 +43,32 @@
             <form>
 
               Nome:</br>
-              <input />
+              <input type="text"/>
 
               </br>
 
               E-mail:</br>
-              <input />
+              <input type="email"/>
 
               </br>
 
               Telefone:</br>
-              <input />
+              <input type="number" />
 
               </br>
 
               Idade:</br>
-              <input />
+              <input type="number" size=3/>
 
               </br>
 
               Data de Nascimento:</br>
-              <input />
+              <input type="date" max="00/11/1979"/>
 
               </br>
 
               Tipo do Endereço:</br>
-              <input />
+              <input/>
 
               </br>
 
@@ -88,7 +88,7 @@
               </br>
 
               CEP:</br>
-              <input />
+              <input type="number" max="00000-000"/>
 
               </br>
 
